# ats

./: .gitignore  Makefile  README.md  meson.build  meson_options.txt
.cache/clangd/index/: info.c.1341FCC69C6B39DC.idx  info.c.D2F3EBFCDD0998AB.idx  info.h.81DEDE64A8DE910F.idx
data/: ats.desktop.in  ats.gresource.xml  guifetch.desktop.in  guifetch.gresource.xml  meson.build
po/: LINGUAS  POTFILES.in  ats.pot  ba.po  be.po  bg.po  ckb.po  crh.po  cv.po  en.po  he_IL.po  it.po  kaa.po  kk.po  kk_Latn.po  la.po  lv.po  meson.build  mn_Cyrl.po  mn_Mong.po  nl.po  pl.po  pt.po  ru.po  sr.po  tt.po  uk.po  uz.po  xal.po
src/: config.vapi  guifetch.desktop.in  info.c  info.h  main.vala  meson.build
src/ui/: Logotypes.vala  main.vala
